tests/e2e/unary_complex.error
Error: syntax error in story at line 3, column 5

3|    a = b and not c
          ^

E0122: `int` can't be converted to `boolean`
