tests/e2e/unary_complex.story
b = 1
c = true
a = b and not c
